src/App.css
/* ... */
.third-finshed {
    border: 4px solid #07c540;
    border-bottom: none;
    border-right: none; 
}
.four-ready {
    position: absolute;
    height: 45px;
    width: 45px;
    border-radius: 150px 0 0 0;
    border: 4px solid #c7c5c5;
    bottom: 0;
    right :0;
    transform: rotate(-180deg);
    border-bottom: none;
    border-right: none;  
}
.four-finished {
    border: 4px solid #07c540;
    border-bottom: none;
    border-right: none; 
}
.progress-wrap h4 {
    margin: 0;
    position: absolute;
    height: 100%;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    font-weight: bold;
}
span.file-upload-wrap {
    position: relative;
    display: inline-block;
}
.file-upload-wrap::after {
    position: absolute;
    content: 'Choose file';
    width: 100%;
    height: 100%;
    background: #b20a09;
    top: 0;
    left: 0;
    border-radius: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    color: #fff;
    pointer-events: none;
}
.description-textarea.form-control {
   height: 250px;
}
.border-red {
    border:1px solid #f00 !important;
}
/* .spinner {
    width: 40px;
    height: 40px;
    border-right: 4px solid #ddd;
    border-radius: 50%;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
} */
.spinner {
    border: 4px solid #f3f3f3;
    border-radius: 50%;
    border-top: 4px solid rgb(32, 31, 31);
    width: 40px;
    height: 40px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translateX(-50%) translateY(-50%);
  }
  .footer-wrap {
      margin-top:60px;
  }
  
  /* Safari */
  @-webkit-keyframes spin {
    0% { -webkit-transform: rotate(0deg); }
    100% { -webkit-transform: rotate(360deg); }
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }

  .loaded-Images video {
      width:100% !important;
      height:auto;
  }
  .photographer-price {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
}
.photographer-price h4 {
    margin: 0;
}
.photographer-price input {
    margin-right: 10px;
}

.or-saperator {
    text-align: center;
    margin-bottom: 10px;
}

#postcode:focus,
#postcode:active {
    border:1px solid #ced4da !important;
}
input#pov {
    margin-right: 10px;
}
input#PortalUpload {
    margin-right: 15px;
}
.err-outer {
  position: fixed;
  background: rgba(0,0,0,0.6);
  width:100%;
  height:100%;
  top: 0;
  bottom:0;
  left:0;
  right:0;
  display: flex;
  align-items: center;
  justify-content: center;
}
.err-outer.err-none {
    display: none;
}

.err-dialoge {
    width: 300px;
    color: #f00;
    border: 1px solid #ddd;    
    background: #fff;    
}
.err-dialoge button {
    color: #b20a09!important;
    background-color: #fff;
    border: 3px solid #b20a09;
    border-radius: 80px;
    text-transform: uppercase;
    padding: 2px 9px;
    font-size: 14px;
    transition: all ease 0.5s;
    display: block;
    width: 150px;
    margin: 20px auto;
}
.err-dialoge button:hover {
    background:#b20a09 !important ;
    color: #fff !important;
}
.err-dialoge h1 {
    font-size: 18px;
    text-align: center;
    margin-top: 20px;
}
.iagree input {
    margin-right: 10px;
}

.new-delete {
    opacity: 0;
    pointer-events: none;
}
.photogallery-btn-outer img {
    width: 190px;
    margin: 25px 0;
}
.photogallery-btn-outer iframe {
    border:none;
    width:190px;
}
.selected-items-outer .photographer-description {
    flex-basis: 132px;

}
.photograph-popup-outer {
    position: fixed;
    width: 100%;
    height: 100%;
    background: rgba(0,0,0,0.5);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    display:none;
}
.photograph-popup-outer.show {
    display: flex;
}
.photo-popup {
    max-width: 700px;
    /* height:70vh; */
    /* height: 70vh; */
    background-color: #fff;
    position: relative;
    /* display: flex;
    align-items: center;
    justify-content: center; */
}
.click-sample {
    cursor: pointer;
}
.carousel.carousel-slider {
    height: 100%;
}
.popup-close {
    position: absolute;
    top: 2px;
    right: 5px;
    color: #000;
    cursor: pointer;
}
.photopopup-trigger {
    cursor: pointer;
}
.pop-image img {
    height:100%;
    width:auto;
    
}
.pop-image {
    width:100%;
    height:100%;
    padding: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}
.pop-slider-wrap {
    padding: 20px;
   
}
.carousel .control-dots {   
    display: none;
}

.carousel .thumbs-wrapper {
    margin: 20px;
    overflow: hidden;
    display: none;
}




@media (max-width:991px) {
    .upload-property-outer {
        max-width: 95%;
    }
    .progress-wrap ul {       
        width: 80%;
    }
    section.banner-outer img {       
        left: 15px;
    }
    .photo-popup {
        max-width: 80%;
        
    }
}
.payMent.payment-none {
   display: none;
}

@media(max-width:767px){
    ul.photograph-tabs li {
        margin-bottom: 10px;
    }
    section.banner-outer img {       
        display: none;
    }
}
.camera-img i {
    font-size: 40px;
    margin-right: 25px;
}
.professional-photographer {
    display: flex;
    align-items: center;
}

